--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rahid Tag Bot",
+  "name": "ՏႮᎷϘᎪᎽᏆͲ ͲᎪᏀᏀᎬᎡ ",
   "logo":"https://te.legra.ph/file/9297759dad7bac69eee9f.jpg",
   "description": "Rahid Tag Pulsuz şəkildə qrupunuzda hərkəsi tag edə bilər.",
   "env": {
