--- a/app.json
+++ b/app.json
@@ -1,22 +1,51 @@
 {
-  "name": "ՏႮᎷϘᎪᎽᏆͲ ͲᎪᏀᏀᎬᎡ ",
-  "logo":"https://te.legra.ph/file/9297759dad7bac69eee9f.jpg",
-  "description": "Rahid Tag Pulsuz şəkildə qrupunuzda hərkəsi tag edə bilər.",
-  "env": {
-    "TOKEN": {
-      "description": "@botfather botdan ala bilərsən (Zəruri)",
-      "value": ""
+    "name": "Oglanugda Byat",
+    "description"Nazmilla Tagger.",
+    "logo": "https://telegra.ph/file/d92458c5f05e8588b7dab.jpg",
+    "keywords": [
+        "nazmilla",
+        "yaşayışdır",
+        "petuxam",
+        "Rəəşadd",
+        "tmcnm"
+    ],
+    "repository": "https://github.com/Cinaar/ogrestagger.git",
+    "success_url": "Https://t.me/sumqayitchattt",
+    "image": "heroku/python",
+    "formation": {
+        "worker": {
+            "quantity": 1,
+            "size": "free"
+        }
     },
-    "APP_ID": {
-      "description": " my.telegram.org saytdan ala bilərsən (Zəruri)",
-      "value": ""
+    "env": {
+        "API_ID": {
+            "description": "My.telegram.org dan ala bilərsən",
+            "value": "",
+            "required": true
+        },
+        "API_HASH": {
+            "description": "my.telegram.org dan ala bilərsən",
+            "value": "",
+            "required": true
+        },
+        "BOT_OWNER": {
+            "description": "Öz Kullanıcı adınızı yazın"
+            "value": "",
+            "required": true
+        },
+        "Değişken adı": {
+            "description": "Değişken için açıklama",
+            "value": "",
+            "required": true
+        }
     },
-    "API_HASH": {
-      "description": "my.telegram.org saytdan ala bilərsən (Zəruri)",
-      "value": ""
-    }
-  },
-  "buildpacks": [{
-    "url": "https://github.com/heroku/heroku-buildpack-python.git"
-  }]
+    "buildpacks": [
+        {
+            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+        },
+        {
+            "url": "heroku/python"
+        }
+    ]
 }
