--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Oglanugda Byat",
-    "description": "Nazmilla Tagger hemise islekdir",
+    "description"Nazmilla Tagger.",
     "logo": "https://telegra.ph/file/d92458c5f05e8588b7dab.jpg",
     "keywords": [
         "nazmilla",
@@ -31,11 +31,9 @@
         },
         "BOT_OWNER": {
             "description": "Öz Kullanıcı adınızı yazın"
-            "value": "",
-            "required": true
         },
         "TOKEN": {
-            "description": "@botfather den ala bilərsən",
+            "description": "BOT FATHR",
             "value": "",
             "required": true
         }
@@ -49,3 +47,19 @@
         }
     ]
 }
+
+ 
+       
+  
+    
+        
+    
+        
+            
+      
+        
+
+          
+    
+        
+       
