--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Oglanugda Byat",
-    "description"Nazmilla Tagger.",
+    "description":"Nazmilla Tagger.",
     "logo": "https://telegra.ph/file/d92458c5f05e8588b7dab.jpg",
     "keywords": [
         "nazmilla",
