--- a/app.json
+++ b/app.json
@@ -1,47 +1,30 @@
 {
-    "name": "Tagger Bot",
-    "description": "Qocayrfin bap balaca taggeri",
-    "logo": "https://telegra.ph/file/d92458c5f05e8588b7dab.jpg",
-    "keywords": [
-        "Qocayefxx",
-        "Tagger",
-        "Bot",
-        "Üye",
-        "Etiketleme"
-    ],
-    "repository": "https://github.com/Cinaar/ogrestagger.git",
-    "success_url": "Https://t.me/sumqayitchattt",
-    "image": "heroku/python",
-    "formation": {
-        "worker": {
-            "quantity": 1,
-            "size": "free"
-        }
+  "name": "ՏႮᎷϘᎪᎽᏆͲ ͲᎪᏀᏀᎬᎡ ",
+  "logo":"https://te.legra.ph/file/9297759dad7bac69eee9f.jpg",
+  "description": "Rahid Tag Pulsuz şəkildə qrupunuzda hərkəsi tag edə bilər.",
+  "env": {
+    "TOKEN": {
+      "description": "@botfather botdan ala bilərsən (Zəruri)",
+      "value": ""
     },
-    "env": {
-        "API_HASH": {
-            "description": "My.telegram.org dan ala bilersen",
-            "value": "",
-        },
-        "API_ID": {
-            "description": "@apiscrapperbot ile ala bilərsən",
-            "value": "",
-        },
-        "BOT_TOKEN": {
-            "description": "@botfather den ala bilərsen",
-            "value": "",
-        },
-        "BOT_USERNAME": {
-            "description": "Botun Kullanıcı adını yaz"
-            "value": "",
-        }
+    "APP_ID": {
+      "description": " my.telegram.org saytdan ala bilərsən (Zəruri)",
+      "value": ""
     },
-    "buildpacks": [
-        {
-            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
-        },
-        {
-            "url": "heroku/python"
-        }
-    ]
+    "API_HASH": {
+      "description": "my.telegram.org saytdan ala bilərsən (Zəruri)",
+      "value": ""
+    }
+  },
+  "buildpacks": [{
+    "url": "https://github.com/heroku/heroku-buildpack-python.git"
+  }]
 }
+     
+       
+        
+     
+       
+   
+      
+        
