--- a/app.json
+++ b/app.json
@@ -45,16 +45,15 @@
             "required": true
         }
     },
-    "buildpacks": [
-        {
-            "url": "https://github.com/heroku/heroku-buildpack-python.git"
-        },
-        {
-            "url": "heroku/python"
-        }
-    ]
+    "buildpacks": [{
+    "url": "https://github.com/heroku/heroku-buildpack-python.git"
+  }]
 }
- 
+        
+            
+      
+     
+  
 
 
      
